# rust-web-proto

./: .gitignore  Cargo.toml  LICENSE  Rocket.toml  readme.md
help/: Cargo.toml
rust-actix-web/: Cargo.toml
rust-actix-web/src/: common.rs  extractors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  responders.rs  test.rs  types.rs
rust-actix-web/tests/: test.rs
rust-axum/: Cargo.toml  readme.md
rust-axum/src/: arguments.rs  extractors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  security.rs  types.rs
rust-axum/src/extractors/: hashing.rs  jwt.rs  mod.rs  validator.rs
rust-axum/src/handlers/: mod.rs  user_handlers.rs
rust-axum/src/middleware/: hashing.rs  mod.rs  request_trace.rs
rust-axum/src/security/: hashing.rs  mod.rs
rust-axum/src/types/: handler.rs  jwt.rs  mod.rs
rust-axum/tests/: test_handlers.rs  test_scenario.rs
rust-axum/tests/common/: mod.rs  test_database.rs  test_persist.rs  test_router.rs
rust-rocket/: Cargo.toml  readme.md
rust-rocket/src/: catchers.rs  fairings.rs  guards.rs  lib.rs  main.rs  routes.rs  tests.rs  types.rs
rust-rocket/tests/: tests.rs
rust-warp/: Cargo.toml
rust-warp/src/: filters.rs  handlers.rs  lib.rs  main.rs  test.rs  types.rs
rust-warp/tests/: test.rs
user-database/: Cargo.toml  readme.md
user-database/src/: database.rs  lib.rs  mongo_database.rs  mongo_database_dyn_safe.rs  types.rs
user-persist/: Cargo.toml  readme.md
user-persist/src/: lib.rs  mongo_persistence.rs  mongo_persistence_dyn_safe.rs  persistence.rs  types.rs
