[package]
name = "rust-actix-web"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "rust-actix"

[dependencies]
actix-http = "3"
actix-service = "2"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde_json = "1.0"
thiserror = "*"
tracing = "0.1"
tracing-actix-web = "0.7"
user-database = { path = "../user-database" }
# TODO: replace with jswonwebtoken
chrono = "0.4"
hmac = "0.12"
jwt = "0.16"
sha2 = "0.10"

[dependencies.tracing-subscriber]
default-features = false
features = ["json", "env-filter", "std", "ansi", "fmt"]
version = "0.3"

[dependencies.tokio]
features = ["time"]
version = "1.47"

[dependencies.actix-web]
features = ["openssl"]
version = "4"

[dependencies.serde]
version = "1.0"

[dependencies.mongodb]
version = "3.2"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.uuid]
features = ["v4"]
version = "1"

[dependencies.openssl]
features = ["v110"]
version = "0.10"
