[package]
name = "rust-actix-web"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "rust-actix"

[dependencies]
actix-http = "3"
actix-service = "2"
actix-web = { version = "4", features = ["openssl"] }
async-trait = "0.1"
chrono.workspace = true
clap.workspace = true
futures.workspace = true
hmac = "0.12"
jwt = "0.16"
log.workspace = true
mongodb.workspace = true
openssl = { version = "0.10", features = ["v110"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["time"] }
tracing.workspace = true
tracing-actix-web = "0.7"
tracing-subscriber.workspace = true
user-database.workspace = true
uuid.workspace = true
