[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "rust-axum"

# [lib]

[dependencies]
user-database = { path = "../user-database" }
thiserror = "2"
serde = "1"
mongodb = "3.2"
tracing = "0.1"
http = "1.3"
http-body = "1"
serde_json = "1"
jsonwebtoken = "9.3"
tower-layer = "0.3"
chrono = "0.4"
futures = "0.3"
sha2 = "0.10"
base64 = "0.22"
axum-macros = "0.5"

[dependencies.tower]
version = "0.5"
features = ["full"]

[dependencies.hyper]
version = "1.6"
features = ["full"]

[dependencies.clap]
version = "4.5"
features = ["derive", "color", "suggestions", "wrap_help"]

[dependencies.axum]
version = "0.8"
features = ["tower-log"]

[dependencies.axum-extra]
version = "0.10"
features = ["typed-header"]

[dependencies.axum-server]
version = "0.7"
features = ["tls-rustls"]

[dependencies.tower-http]
version = "0.6"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["json", "env-filter", "std", "ansi", "fmt"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
cool_asserts = "2"
