[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["tower-log"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
chrono.workspace = true
clap.workspace = true
futures.workspace = true
http = "1.3"
http-body = "1"
hyper = "1.6"
jsonwebtoken = "9.3"
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = "1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "request-id",
  "propagate-header",
  "trace",
] }
tower-layer = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
user-database.workspace = true
uuid.workspace = true

[dev-dependencies]
cool_asserts = "2"
