[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
futures.workspace = true
futures-util = "0.3"
hmac = "0.12"
jwt = "0.16"
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
user-database.workspace = true
uuid.workspace = true

[dependencies.rocket]
features = ["json", "tls"]
version = "0.5.1"
