[package]
name = "rust-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rust-warp"

[lib]

[dependencies]
serde = "1.0"
serde_json = "1.0"
mongodb = "3.2"
futures = "0.3"
async-trait = "0.1"
user-persist = { path = "../user-persist" }

[dependencies.tracing]
version = "0.1"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = true
features = ["json", "env-filter", "fmt"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.warp]
version = "0.4"
features = ["server", "compression-gzip"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
flate2 = "1"
