[package]
name = "rust-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rust-warp"

[lib]

[dependencies]
async-trait = "0.1"
futures = "0.3"
mongodb = "3.2"
serde = "1.0"
serde_json = "1.0"
user-database = { path = "../user-database" }

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
default-features = true
features = ["json", "env-filter", "fmt"]
version = "0.3"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.uuid]
features = ["v4"]
version = "1"

[dependencies.warp]
features = ["server", "compression-gzip"]
version = "0.4"

[dependencies.tokio]
features = ["full"]
version = "1"

[dev-dependencies]
flate2 = "1"
