[package]
name = "rust-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rust-warp"

[lib]

[dependencies]
async-trait = "0.1"
clap.workspace = true
futures.workspace = true
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
user-database.workspace = true
uuid.workspace = true
warp = { version = "0.4", features = ["server", "compression-gzip"] }

[dev-dependencies]
flate2 = "1"
warp = { version = "0.4", features = ["test"] }
