[package]
name = "user-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
mongodb = "3.2"
regex = "1"
serde = "1"
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"

[dependencies.clap]
features = ["derive", "color", "suggestions", "wrap_help"]
version = "4.5"

[dependencies.uuid]
features = ["v4"]
version = "1"

[dependencies.validator]
features = ["derive"]
version = "0.20"
