[package]
name = "user-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap.workspace = true
futures.workspace = true
mongodb.workspace = true
regex = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dependencies.validator]
features = ["derive"]
version = "0.20"
