[package]
name = "user-persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
mongodb = "2.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
# log = "0.4"
clap = "3.0"
lazy_static = "1.4"
regex = "1.5"
tracing = "0.1"
thiserror = "1.0"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.validator]
version = "0.14"
features = ["derive"]
