[package]
name = "user-persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
mongodb = "3.2"
futures = "0.3"
async-trait = "0.1"
lazy_static = "1"
regex = "1"
tracing = "0.1"
thiserror = "2.0"

[dependencies.clap]
version = "4.5"
features = ["derive", "color", "suggestions", "wrap_help"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.validator]
version = "0.20"
features = ["derive"]
